@@ -8,6 +8,7 @@ core 2.1.3 - not released yet
 	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
 	* Bugfix: XML entities were encoded inside of dwoo tags which caused parse error in template engine (dwoo)
 	* Bugfix: Hiding of notifications of the same type failed when more than 2 dots were in the identifier
+	* Added: Auto-focus RTE of first form field (e.g. comment text)
 	* Added: Cropping for database relation labels in form
 	* Added TodoyuTime::time() to set null values to current time
 	* Added TodoyuDateRange
